# 25b3976_Sor_Project

./: README.md
install/: local_setup.sh  setup.sh
install/follower/lib/follower/: follower
install/follower/share/follower/: package.sh  package.xml
install/follower/share/follower/launch/: new_track.launch.py  sor_track.launch.py
install/follower/share/follower/models/custom_turtlebot/: model.config  model.sdf
install/follower/share/follower/models/custom_turtlebot/meshes/: lds.dae  tire.dae  waffle_pi_base.dae
install/follower/share/follower/models/sor_track/: model.config  model.sdf
install/follower/share/follower/models/track2/: model.config  model.sdf
install/follower/share/follower/worlds/: new_track.sdf  sor_track.sdf
log/: latest_build
src/follower/: package.xml  setup.py
src/follower/follower/: follower_node.py
src/follower/launch/: new_track.launch.py  sor_track.launch.py
src/follower/models/custom_turtlebot/: model.config  model.sdf
src/follower/models/sor_track/: model.config  model.sdf
src/follower/models/track2/: model.config  model.sdf
src/follower/worlds/: new_track.sdf  sor_track.sdf
